--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -56,7 +56,7 @@
             <h3>Redes Comunitárias</h3>
             <p><strong>Horário:</strong> 15:05 às 15:45</p>
             <p><strong>Conteúdo:</strong> O que são as redes comunitárias e qual papel delas para a internet brasileira?</p>
-            <p><strong>Por:</strong> Em breve</p>
+            <p><strong>Por:</strong> Daiane Araújo dos Santos</p>
         </div>
         <div class="event col-6">
             <h3>Pausa para o café</h3>
