chore: update ceweb apoio

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -50,7 +50,7 @@
             <h3>Educação digital Popular</h3>
             <p><strong>Horário:</strong> 14:20 às 15:00</p>
             <p><strong>Conteúdo:</strong> O que é a educação digital popular, como podemos aplicar no dia a dia para mudar o contexto social atual do uso da tecnologia?</p>
-            <p><strong>Por:</strong> Em breve</p>
+            <p><strong>Por:</strong> Ramires - Tecnorganico</p>
         </div>
         <div class="event col-6">
             <h3>Redes Comunitárias</h3>
@@ -148,6 +148,11 @@
                 <section class="col">
                     <a href="https://frontinsampa.com.br/" target="_blank" title="Logo Front In">
                         <img src="/images/logo-frontin-full.svg" alt="Logo Front In" height="60">
+                    </a>
+                </section>
+                <section class="col">
+                    <a href="https://frontinsampa.com.br/" target="_blank" title="Logo Front In">
+                        <img src="/images/logo-ceweb.br.jpeg" alt="Logo Front In" height="60">
                     </a>
                 </section>
             </section>
