chore: update logo

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -151,8 +151,8 @@
                     </a>
                 </section>
                 <section class="col">
-                    <a href="https://frontinsampa.com.br/" target="_blank" title="Logo Front In">
-                        <img src="/images/logo-ceweb.br.jpeg" alt="Logo Front In" height="60">
+                    <a href="https://ceweb.br/" target="_blank" title="Logo Ceweb">
+                        <img src="/images/ceweb-br-logo-vector.svg" alt="Logo Ceweb" height="60">
                     </a>
                 </section>
             </section>
