Feat conf page (#152)
* feat: conf page

* update page

* chore: updates

* chore: updates

* chore: updates

* chore: updates

* updates page conf

* updates page conf

* updates page conf

* updates page conf

* chore: doações

* chore: doações

* chore: doações

* chore: doações

* chore: add logo parceiro mtst

* chore: add logo programacao dinamica parceiro

* chore: add logo programacao dinamica parceiro

* chore: add parceiros

* chore: logo todas as letras

* chore: logo todas as letras

* chore: move logos

* fix: update grid

* fix: update grid

* feat: update page link sympla

* chore: add logo linuxtips

* Update themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs

Co-authored-by: Gustavo Castilião <gucastiliao@gmail.com>

* chore: novos parceiros e fix grid

* fix: local e title da pagina

* updates horarios e convidados

* chore: updates

* chore: updates

* chore: updates

* chore: updates

* chore: updates

* update moderada da mesa

* update palestrantes

* Update conferencia-tecnologia-e-sociedade.ejs

* updates page conf

* chore: update ceweb apoio

* chore: update logo

* chore: update logo

---------

Co-authored-by: Reginaldo Junior <reginaldo.junior@creditas.com.br>
Co-authored-by: Gustavo Castilião <gucastiliao@gmail.com>

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -50,7 +50,7 @@
             <h3>Educação digital Popular</h3>
             <p><strong>Horário:</strong> 14:20 às 15:00</p>
             <p><strong>Conteúdo:</strong> O que é a educação digital popular, como podemos aplicar no dia a dia para mudar o contexto social atual do uso da tecnologia?</p>
-            <p><strong>Por:</strong> Em breve</p>
+            <p><strong>Por:</strong> Ramires - Tecnorganico</p>
         </div>
         <div class="event col-6">
             <h3>Redes Comunitárias</h3>
@@ -155,6 +155,11 @@
                 <section class="col">
                     <a href="https://perifacode.com/" target="_blank" title="Logo Perifa Code">
                         <img src="/images/perifacode.jpeg" alt="Logo Perifa Code" height="60">
+                    </a>
+                </section>
+                <section class="col">
+                    <a href="https://ceweb.br/" target="_blank" title="Logo Ceweb">
+                        <img src="/images/ceweb-br-logo-vector.svg" alt="Logo Ceweb" height="90">
                     </a>
                 </section>
             </section>
