chore: adiciona ultimos palestrantes

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade.ejs
@@ -70,10 +70,10 @@
             <p><strong>Por:</strong> Moderadora da Mesa: Carla Vieira, participantes: Rodolfo Avelino, Tiago Ayub e mais em breve..</p>
         </div>
         <div class="event col-6">
-            <h3>Em breve</h3>
+            <h3>Soberania digital popular</h3>
             <p><strong>Horário:</strong> 17:25 às 18:35</p>
             <p><strong>Conteúdo:</strong> Como organizar uma formação politica e técnica, com voluntários com ênfase em soberania digital popular.</p>
-            <p><strong>Por:</strong> Em breve</p>
+            <p><strong>Por:</strong> Kaio, Willian, Renato Bednarski Ramos, André Mário dos Santos, Cristóvão.</p>
         </div>
         <div class="event col-6">
             <h3>Finalização</h3>
