--- a/themes/quebradev/layout/_partial/initial.ejs
+++ b/themes/quebradev/layout/_partial/initial.ejs
@@ -1,4 +1,4 @@
 <section class="text-center description">
     <h1>Um coletivo que tem como objetivo democratizar a informação para a periferia.</h1>
-    <p>Primeira Conferência do QuebraDev. Tecnologia e Sociedade: Tecnologia para Quem? <a href="/conferencia-tecnologia-e-sociedade/" target="_blank" rel="noreferrer" class="underline">Inscreva-se</a></p>
+    <p>Veja a agenda do coletivo e nossas próximas atividades: <a href="/agenda/" target="_blank" rel="noreferrer" class="underline">Agenda</a></p>
 </section>
