--- a/themes/quebradev/layout/_partial/initial.ejs
+++ b/themes/quebradev/layout/_partial/initial.ejs
@@ -1,4 +1,4 @@
 <section class="text-center description">
-    <h1>Um coletivo que tem como objetivo democratizar a informação para a periferia.</h1>
+    <h1>Um movimento social de origem periférica com destino voltado a origem.</h1>
     <p>Veja a agenda do coletivo e nossas próximas atividades: <a href="/agenda/" target="_blank" rel="noreferrer" class="underline">Agenda</a></p>
 </section>
