--- a/themes/quebradev/layout/_partial/initial.ejs
+++ b/themes/quebradev/layout/_partial/initial.ejs
@@ -1,4 +1,4 @@
 <section class="text-center description">
     <h1>Um coletivo de tecnologia de origem periférica com destino voltado à origem.</h1>
-    <p>Veja a agenda do coletivo e nossas próximas atividades: <a href="/agenda/" target="_blank" rel="noreferrer" class="underline">Agenda</a></p>
+    <p>Segunda Conferência do QuebraDev. Tecnologia e Sociedade: Tecnologia para Todos! <a href="/conferencia-tecnologia-e-sociedade-2/" target="_blank" rel="noreferrer" class="underline">Inscreva-se</a></p>
 </section>
