--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -65,7 +65,21 @@
     <div class="row">
         <div class="col-12 social text-center">
             <h3>Parceiros desta conferência</h3>
-            <h4>Seja um parceiro, envie um e-mail para <a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a> e saiba como nos ajudar financeiramente ou não.</h4>
+
+            <section class="row">
+                <section class="col">
+                    <a href="https://opara.me/" target="_blank" title="Logo Opará">
+                        <img src="https://opara.me/wp-content/uploads/2023/01/Opara-ID_SIMBOLO-ORIGINAL.png" alt="Logo Opará" height="60">
+                    </a>
+                </section>
+                <section class="col">
+                    <a href="https://comunidade.afroya.tech/quemsomos" target="_blank" title="Logo Afroya Tech Conf">
+                        <img src="/images/afroya.jpeg" alt="Logo Afroya Tech Conf" height="60">
+                    </a>
+                </section>
+            </section>
+
+            <p>Seja um parceiro, envie um e-mail para <a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a> e saiba como nos ajudar financeiramente ou não.</p>
         </div>
     </div>
 
