chore: adiciona parceiros opara e afroya na pagina da conferencia

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -69,11 +69,11 @@
             <section class="row">
                 <section class="col">
                     <a href="https://opara.me/" target="_blank" title="Logo Opará">
-                        <img src="/images/oparame.png" alt="Logo Opará" height="60">
+                        <img style="background-color: #fff;" src="/images/oparame.png" alt="Logo Opará" height="60">
                     </a>
                 </section>
                 <section class="col">
-                    <a style="background-color: #fff;" href="https://comunidade.afroya.tech/quemsomos" target="_blank" title="Logo Afroya Tech Conf">
+                    <a href="https://comunidade.afroya.tech/quemsomos" target="_blank" title="Logo Afroya Tech Conf">
                         <img src="/images/afroya.jpeg" alt="Logo Afroya Tech Conf" height="60">
                     </a>
                 </section>
