Feat new page conf (#170)
* chore: new page conf

* chore: adiciona parceiros opara e afroya na pagina da conferencia

* chore: adiciona parceiros opara e afroya na pagina da conferencia

* chore: adiciona parceiros opara e afroya na pagina da conferencia

* chore: adiciona parceiros opara e afroya na pagina da conferencia

---------

Co-authored-by: Reginaldo Luis De Luna Junior <reginaldo.junior@CRED-C02G52420KPF.local>

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -65,7 +65,24 @@
     <div class="row">
         <div class="col-12 social text-center">
             <h3>Parceiros desta conferência</h3>
-            <h4>Seja um parceiro, envie um e-mail para <a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a> e saiba como nos ajudar financeiramente ou não.</h4>
+
+            <section class="row">
+                <section class="col">
+                    <a href="https://opara.me/" target="_blank" title="Logo Opará">
+                        <img style="background-color: #fff;" src="/images/oparame.png" alt="Logo Opará" height="60">
+                    </a>
+                </section>
+                <section class="col">
+                    <a href="https://comunidade.afroya.tech/quemsomos" target="_blank" title="Logo Afroya Tech Conf">
+                        <img src="/images/afroya.jpeg" alt="Logo Afroya Tech Conf" height="60">
+                    </a>
+                </section>
+            </section>
+            
+            <br/>
+
+            <p>Seja um parceiro, envie um e-mail para <a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a> e saiba como nos ajudar financeiramente ou não.</p>
+
         </div>
     </div>
 
