fix: link afroya

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -73,7 +73,7 @@
                     </a>
                 </section>
                 <section class="col">
-                    <a href="https://comunidade.afroya.tech/quemsomos" target="_blank" title="Logo Afroya Tech Conf">
+                    <a href="https://afroya.tech/" target="_blank" title="Logo Afroya Tech Conf">
                         <img src="/images/afroya.jpeg" alt="Logo Afroya Tech Conf" height="60">
                     </a>
                 </section>
