--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -69,7 +69,7 @@
             <section class="row">
                 <section class="col">
                     <a href="https://opara.me/" target="_blank" title="Logo Opará">
-                        <img style="background-color: #fff;" src="/images/oparame.png" alt="Logo Opará" height="60">
+                        <img src="/images/oparame.png" alt="Logo Opará" height="60">
                     </a>
                 </section>
                 <section class="col">
