Fix: Modificação da descrição da atividade da roda de conversa da conferencia (#174)
* Modificação da descrição da atividade da roda de conversa da conferencia

* modifica d por n

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -72,9 +72,9 @@
             <p><strong>Por:</strong> Henrique Xavier</p>
         </div>
         <div class="event col-6">
-            <h3>Mesa | O uso das redes sociais e da mídia para o avanço da esquerda e das ideias preogressistas</h3>
+            <h3>Mesa | Algoritmos nas Redes: avanço da direita através do uso mais assertivo ou falta de moderação e regulamentação?</h3>
             <p><strong>Horário:</strong> 13h45m até 14h45m</p>
-            <p><strong>Por:</strong> Moderador: Júnior Rocha, participantes: Veronyka Gimenes do Código Não Binário e Normose</p>
+            <p><strong>Por:</strong> Moderador: Júnior Rocha, participantes: Veronyka Gimenes do Código Não Binário e Kenji do canal Normose</p>
         </div>
 
         <div class="event col-6">
