chore: add novo parceiro 'sindpd'

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -132,6 +132,11 @@
                         <img src="/images/afroya.jpeg" alt="Logo Afroya Tech Conf" height="60">
                     </a>
                 </section>
+                <section class="col">
+                    <a href="https://www.sindpd.org.br/" target="_blank" title="Logo SindPD SP">
+                        <img src="/images/novo_sindpd_branco.png" alt="Logo SindPD SP" height="60">
+                    </a>
+                </section>
             </section>
             
             <br/>
