add link to download fanzine

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -10,6 +10,17 @@
 
     <div class="row">
         <div class="col-12 social text-left">
+            <h3>Download</h3>
+            <p>Faça o Download da Revista técnico-científica do coletivo @quebradev reunindo 4 artigos e 2 resumos de palestras.</p>
+
+            <p>
+                <a href="https://raw.githubusercontent.com/QuebraDev/cts2/refs/heads/main/FANZINE%20-%20CTS%202024.pdf" target="_blank" title="Download da versão impressa da revista Tecnologia e Sociedade 2">Clique AQUI!</a>
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 social text-left">
             <h3>Descrição</h3>
             <p>Na edição passada, fizemos a pergunta: Tecnologia para Quem? Com isso, trouxemos diversas pessoas para desafiar a ideia de que a tecnologia deve servir apenas a propósitos mercadológicos, trazendo o debate para a esfera do uso da tecnologia em benefício das comunidades periféricas e apresentando reflexões sobre como isso pode ser alcançado.</p>
             <p>Nesta edição, vamos debater o tema: Tecnologia para Todas Pessoas! Queremos que a produção técnico-científica da tecnologia seja pensada para e alcançavel para todas as pessoas. A ideia central é projetar e refletir sobre as possibilidades dessas tecnologias em nossos territórios, construídos pelos coletivos populares, cientistas de grupos sociais marginalizados e trabalhadores.</p>
