feat: add track links

--- a/themes/quebradev/layout/_partial/initial.ejs
+++ b/themes/quebradev/layout/_partial/initial.ejs
@@ -1,4 +1,4 @@
 <section class="text-center description">
     <h1>Um coletivo de tecnologia de origem periférica com destino voltado à origem.</h1>
-    <p>Faça o Download da Revista técnico-científica do coletivo @quebradev reunindo 4 artigos e 2 resumos de palestras: <a href="https://raw.githubusercontent.com/QuebraDev/cts2/refs/heads/main/FANZINE%20-%20CTS%202024.pdf" target="_blank" title="Download da versão impressa da revista Tecnologia e Sociedade 2">Clique AQUI!</a></p>
+    <p>Faça o Download da Revista técnico-científica do coletivo @quebradev reunindo 4 artigos e 2 resumos de palestras: <a href="https://raw.githubusercontent.com/QuebraDev/cts2/refs/heads/main/FANZINE%20-%20CTS%202024.pdf" target="_blank" title="Download da versão impressa da revista Tecnologia e Sociedade 2" onclick="gtag('event', 'download', { event_category: 'link', event_label: 'Fanzine PDF (INITIAL-PAGE)', value: 1});">Clique AQUI!</a></p>
 </section>
