--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -14,7 +14,7 @@
             <p>Faça o Download da Revista técnico-científica do coletivo @quebradev reunindo 4 artigos e 2 resumos de palestras.</p>
 
             <p>
-                <a href="https://raw.githubusercontent.com/QuebraDev/cts2/refs/heads/main/FANZINE%20-%20CTS%202024.pdf" target="_blank" title="Download da versão impressa da revista Tecnologia e Sociedade 2">Clique AQUI!</a>
+                <a href="https://raw.githubusercontent.com/QuebraDev/cts2/refs/heads/main/FANZINE%20-%20CTS%202024.pdf" target="_blank" title="Download da versão impressa da revista Tecnologia e Sociedade 2" onclick="gtag('event', 'download', { event_category: 'link', event_label: 'Fanzine PDF (CTS2-PAGE)', value: 1});">Clique AQUI!</a>
             </p>
         </div>
     </div>
