--- a/themes/quebradev/layout/_partial/google-analytics.ejs
+++ b/themes/quebradev/layout/_partial/google-analytics.ejs
@@ -9,5 +9,17 @@
     ga('create', '<%= theme.google_analytics %>', 'auto');
     ga('send', 'pageview');
 </script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=<%= theme.google_analytics %>"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', '<%= theme.google_analytics %>');
+</script>
+
 <!-- End Google Analytics -->
 <% } %>
