feat: create page certifieds

--- a/themes/quebradev/layout/_partial/navbar.ejs
+++ b/themes/quebradev/layout/_partial/navbar.ejs
@@ -4,6 +4,7 @@
         <a href="/sobre" class="py-2">Sobre</a>
         <a href="/agenda" class="py-2">Agenda</a>
         <a href="/apoie" class="py-2">Apoie</a>
+        <a href="/certificados" class="py-2">Certificados</a>
         <a href="/conferencia-tecnologia-e-sociedade-2" class="py-2">Conferência</a>
     </div>
 </nav>
