chore: add e-mail about questions, emissions etc...

--- a/themes/quebradev/layout/_partial/certificados.ejs
+++ b/themes/quebradev/layout/_partial/certificados.ejs
@@ -19,7 +19,7 @@
     </div>
 
     <div class="text-center contact-email">
-        <p><a href="mailto:quebradev@gmail.com">quebradev@gmail.com</a></p>
+        <p><a href="mailto:quebradev@gmail.com">Dúvidas sobre certificados, emissões e consultas: quebradev@gmail.com</a></p>
     </div>
 </div>
 
