feat: include pages and doi links to journal

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -8,18 +8,21 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 social text-left">
-            <h3>Download</h3>
+    <div class="events-wrapper-basic row">
+        <div class="col-3">
+            <img src="/images/revista/cover-cts-2.png" style="width: 25vh; height:38vh;" />
+        </div>
+        <div class="col-9">
+            <h2><b>Revista CTS</b></h2>
             <p>Faça o Download da Revista técnico-científica do coletivo @quebradev reunindo 4 artigos e 2 resumos de palestras.</p>
-
-            <p>
-                <a href="https://raw.githubusercontent.com/QuebraDev/cts2/refs/heads/main/FANZINE%20-%20CTS%202024.pdf" target="_blank" title="Download da versão impressa da revista Tecnologia e Sociedade 2" onclick="gtag('event', 'download', { event_category: 'link', event_label: 'Fanzine PDF (CTS2-PAGE)', value: 1});">Clique AQUI!</a>
-            </p>
+            
+            <br>
+            <br>
+            <a href="/revista-cts-2" target="_blank" style="border: solid 1px white; background-color: #000; padding: 15px 40px;">Acessar</a>
         </div>
     </div>
 
-    <div class="row">
+    <div class="events-wrapper-basic row">
         <div class="col-12 social text-left">
             <h3>Descrição</h3>
             <p>Na edição passada, fizemos a pergunta: Tecnologia para Quem? Com isso, trouxemos diversas pessoas para desafiar a ideia de que a tecnologia deve servir apenas a propósitos mercadológicos, trazendo o debate para a esfera do uso da tecnologia em benefício das comunidades periféricas e apresentando reflexões sobre como isso pode ser alcançado.</p>
@@ -106,7 +109,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="events-wrapper row">
         <div class="col-12 social text-center">
             <h3>Inscreva-se</h3>
             <p>Se inscreva usando a plataforma Sympla, clicando <a href="https://www.sympla.com.br/evento/conferencia-tecnologia-e-sociedade-tecnologia-para-todos/2644554?cache=nao" target="_blank"><u>aqui</u></a></p>
@@ -114,7 +117,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="events-wrapper row">
         <div class="col-12 social text-center">
             <h3>Apoie esta Conferência</h3>
             <p>Para mantermos todos os ingressos grátis e pagar os custos necessários para produção de um evento precisamos da sua ajuda. Qualquer valor é bem vindo!</p>
@@ -128,7 +131,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="events-wrapper row">
         <div class="col-12 social text-center">
             <h3>Parceiros desta conferência</h3>
 
@@ -157,7 +160,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="events-wrapper row">
         <div class="col-12 social text-center">
             <h3>Patrocinio</h3>
             <p>Quer ser um patrocinador? Veja nosso <u><a href="https://docs.google.com/presentation/d/1ZoS8qmXBBe3Tuy4TFpyt5evp-ET_ESr5pg1GDKqZzt8/edit?usp=sharing" target="_blank">material</a></u> de patrocinio e entre em contato conosco.</p>
