--- a/themes/quebradev/layout/_partial/revista-cts-2.ejs
+++ b/themes/quebradev/layout/_partial/revista-cts-2.ejs
@@ -41,7 +41,7 @@
         </div>
 
         <div class="col-3">
-            <img src="/images/revista/cover-cts-2.png" style="width: 25vh; height:38vh;" />
+            <img src="/images/revista/cover-cts-2.png" style="width: 100%; height:100%;" />
         </div>
         <div class="col-9">
             <p>Editor: Coletivo QuebraDev</p>
