--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -10,7 +10,7 @@
 
     <div class="events-wrapper-basic row">
         <div class="col-3">
-            <img src="/images/revista/cover-cts-2.png" style="width: 100%; height:100%;" />
+            <img src="/images/revista/cover-cts-2.png" style="width: 100%; height: auto;" />
         </div>
         <div class="col-9">
             <h2><b>Revista CTS</b></h2>
