--- a/themes/quebradev/layout/_partial/revista-cts-2.ejs
+++ b/themes/quebradev/layout/_partial/revista-cts-2.ejs
@@ -99,13 +99,13 @@
                     Ressalta-se a importência de enfrentar essas inovações tecnológicas com ações coletivas, o oposto ao fardo do nerd branco, que se revela como uma ideologia na imagem habitual do hacker, apresentado como um justiceiro.
                 </p>
 
-                <a href="https://doi.org/10.5281/zenodo.15009137" target="_blank"><img src="/images/revista/pdf-icon.svg" width="24"/> Link para o arquivo</a>
+                <a href="https://doi.org/10.5281/zenodo.15009050" target="_blank"><img src="/images/revista/pdf-icon.svg" width="24"/> Link para o arquivo</a>
                 <!-- <a href="https://www.youtube.com/watch?v=zmGKLVC4QxU" target="_blank"><img src="/images/revista/youtube-icon.svg" width="24"/> Link do Vídeo Completo</a> -->
             </div>
             <br>
             <div class="event-paper col-12">
                 <h3>TBC-DTW: Medição automática de viés midiático baseada em modelagem de tópicos</h3>
-                <p class="author">Pessoa, Lucas da Silva Alves</p>
+                <p class="author">Zitei, Daniel Pereira</p>
                 <p> 
                     A crescente presença de notícias falsas, incompletas ou incorretas levanta preocupações no meio acadêmico. Esta pesquisa tem como objetivo desenvolver e avaliar uma abordagem não supervisionada para identificar viés na mídia em língua portuguesa. Para isso, são abordadas duas questões-chave.
 
@@ -118,7 +118,7 @@
                     A métrica TBC-DTW (Dynamic Time Warping) é introduzida como uma abordagem inovadora para medir o viés na mídia ao longo do tempo. Os resultados indicam o potencial dessa abordagem para compreender e comparar o viés na mídia em diferentes fontes
                 </p>
 
-                <a href="https://doi.org/10.5281/zenodo.15009137" target="_blank"><img src="/images/revista/pdf-icon.svg" width="24"/> Link para o arquivo</a>
+                <a href="https://doi.org/10.5281/zenodo.15009155" target="_blank"><img src="/images/revista/pdf-icon.svg" width="24"/> Link para o arquivo</a>
                 <!-- <a href="https://www.youtube.com/watch?v=zmGKLVC4QxU" target="_blank"><img src="/images/revista/youtube-icon.svg" width="24"/> Link do Vídeo Completo</a> -->
             </div>
         </div>
