--- a/themes/quebradev/layout/_partial/revista-cts-2.ejs
+++ b/themes/quebradev/layout/_partial/revista-cts-2.ejs
@@ -145,7 +145,7 @@
 
             <div class="event-paper col-12">
                 <h3>Encruzilhadas da educação: desafios para uma educação tecnológica popular e contra colonial</h3>
-                <p class="author">Marcela Canto</p>
+                <p class="author">Marcela da Silva Canto Bastos</p>
                 <p> 
                     Marcela foi bolsista do programa Youth do CGI.br em 2024, é graduanda em Ciências Sociais pela Universidade Federal Fluminense, e realiza pesquisas nas áreas de Sociologia Digital e Letramento Digital. Integrante do grupo de pesquisa Pensamento Social em Dados (Data\_PS) e educadora popular de Sociologia, cidadania digital e letramento digital em São Gonçalo - RJ.
                 </p>
