Arruma link de apoio

--- a/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
+++ b/themes/quebradev/layout/_partial/conferencia-tecnologia-e-sociedade-2.ejs
@@ -163,7 +163,7 @@
     <div class="events-wrapper row">
         <div class="col-12 social text-center">
             <h3>Patrocinio</h3>
-            <p>Quer ser um patrocinador? Veja nosso <u><a href="https://docs.google.com/presentation/d/1ZoS8qmXBBe3Tuy4TFpyt5evp-ET_ESr5pg1GDKqZzt8/edit?usp=sharing" target="_blank">material</a></u> de patrocinio e entre em contato conosco.</p>
+            <p>Quer ser um patrocinador? Veja a nossa campanha de <u><a href="https://apoia.se/quebradev" target="_blank">finaciamento coletivo</a></u> para apoiar o projeto.</p>
         </div>
     </div>
 
