Fix dos nomes (#180)
* Update revista-cts-2.ejs

* Update revista-cts-2.ejs

* Arruma link de apoio

--- a/themes/quebradev/layout/_partial/revista-cts-2.ejs
+++ b/themes/quebradev/layout/_partial/revista-cts-2.ejs
@@ -90,7 +90,7 @@
             <br>
             <div class="event-paper col-12">
                 <h3>Subvertendo Algoritmos e Sistemas de Controle</h3>
-                <p class="author">Pessoa, Lucas da Silva Alves</p>
+                <p class="author">Félix, Maria Alice Silva Santos</p>
                 <p> 
                     A indústria 4.0, marcada pelas transformações digitais globais, resgata antigas expressões da questão social, como o racismo. O estudo analisa a integração das tecnologias da Informação e Comunicação (TIC) e o racismo com o foco no racismo algorítmico e no hacktivismo digital.
 
@@ -145,7 +145,7 @@
 
             <div class="event-paper col-12">
                 <h3>Encruzilhadas da educação: desafios para uma educação tecnológica popular e contra colonial</h3>
-                <p class="author">Larissa Vitoriano</p>
+                <p class="author">Marcela da Silva Canto Bastos</p>
                 <p> 
                     Marcela foi bolsista do programa Youth do CGI.br em 2024, é graduanda em Ciências Sociais pela Universidade Federal Fluminense, e realiza pesquisas nas áreas de Sociologia Digital e Letramento Digital. Integrante do grupo de pesquisa Pensamento Social em Dados (Data\_PS) e educadora popular de Sociologia, cidadania digital e letramento digital em São Gonçalo - RJ.
                 </p>
