--- a/themes/quebradev/layout/_partial/revista-cts-2.ejs
+++ b/themes/quebradev/layout/_partial/revista-cts-2.ejs
@@ -85,7 +85,7 @@
                 </p>
 
                 <a href="https://doi.org/10.5281/zenodo.15009137" target="_blank"><img src="/images/revista/pdf-icon.svg" width="24"/> Link para o arquivo</a>
-                <!-- <a href="https://www.youtube.com/watch?v=zmGKLVC4QxU" target="_blank"><img src="/images/revista/youtube-icon.svg" width="24"/> Link do Vídeo Completo</a> -->
+                <a href="https://youtu.be/OBUInr0utrk" target="_blank"><img src="/images/revista/youtube-icon.svg" width="24"/> Link do Vídeo Completo</a>
             </div>
             <br>
             <div class="event-paper col-12">
